# nf-consumidor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
docs/: index.md  references.md
docs/analysis/: complexity.md  difficulties.md  index.md  lessons-learned.md  risk-matrix.md
docs/architecture/: bounded-contexts.md  index.md  overview.md
docs/architecture/adr/: ADR-001-modular-monolith.md  ADR-002-async-ocr-celery.md  ADR-003-croston-predictive.md
docs/data-dictionary/: entities.md  ibpt-integration.md  index.md  tax-model.md
docs/devlog/: 2026-05-28-value-objects.md  2026-06-03-value-objects-tests.md  index.md
docs/stylesheets/: govbr.css
docs/testing/: coverage-report.md  index.md
overrides/: main.html
src/nf_consumidor/domain/shared/: value_objects.py
tests/unit/domain/: test_value_objects.py
